ref made some code mode readable, fixed a test to fail on error

--- a/src/othello/OthelloApp.css
+++ b/src/othello/OthelloApp.css
@@ -1,5 +1,5 @@
 body {
-  /*font: 14px 'Century Gothic', Futura, sans-serif;*/
+  font-family:'Roboto';
   margin: 20px;
 }
 
